--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
+        <!-- <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
+ -->
     </dependencies>
 </project>
